--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write  # Grant the token the required permission
+      contents: read   # Ensure the token also has read access to contents
     steps:
       - name: Checkout the code
         uses: actions/checkout@v4
